--- a/my-portfolio/src/css/About.css
+++ b/my-portfolio/src/css/About.css
@@ -1,16 +1,24 @@
 /* About.css */
 
 .about-section {
-    padding: 80px 0;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: auto; /* Adjust height as needed */
+    object-fit: cover;
   }
   
   .about-section h2 {
     font-size: 2.5rem;
+    color: white;
     margin-bottom: 20px;
   }
   
   .about-section p {
     font-size: 1.1rem;
+    color: white;
     line-height: 1.8;
   }
+  
+  
   
