--- a/my-portfolio/src/css/Home.css
+++ b/my-portfolio/src/css/Home.css
@@ -1,38 +1,51 @@
-/* Home.css */
-
 .home-container {
     position: relative;
-  }
-  
-  .video-section {
+}
+
+.video-section {
     position: relative;
     width: 100%;
-    height: 500px; /* Adjust height as needed */
+    height: 300px; 
     overflow: hidden;
-  }
-  
-  .video {
+}
+
+.video {
+    position: fixed;
     width: 100%;
     height: auto;
     object-fit: cover;
-  }
-  
-  .video-overlay {
+    z-index: -1; /* Ensures the video stays behind other content */
+}
+
+.video::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    backdrop-filter: blur(20px); 
+    z-index: -1; 
+}
+
+.video-overlay {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
-  }
-  
-  .video-text {
+    z-index: 1; /* Ensure the overlay content is above the video */
+}
+
+.video-text {
+    margin-top: 60px;
     font-size: 3rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  .video-subtext {
+}
+
+.video-subtext {
     font-size: 1.5rem;
-  }
-  
+}
