--- a/my-portfolio/src/css/Home.css
+++ b/my-portfolio/src/css/Home.css
@@ -5,7 +5,8 @@
 .video-section {
     position: relative;
     width: 100%;
-    height: 300px; 
+    height: 150px; 
+    margin-bottom: 50px;
     overflow: hidden;
 }
 
@@ -40,7 +41,7 @@
 }
 
 .video-text {
-    margin-top: 60px;
+    margin-top: 10px;
     font-size: 3rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
